# neuronal-networks-server

./: .dockerignore  .gitignore  CMakeLists.txt  Define.hpp  Dockerfile  Opcodes.hpp  README.md  Server.hpp  main.cpp
cmake/: options.cmake
cmake/macros/: AutoCollect.cmake  GroupSources.cmake
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/eigen/: CMakeLists.txt
doc/: install-dependencies.sh
server/: Session.hpp
server/protocol/: Opcodes.hpp
src/: CMakeLists.txt
src/NeuronalNetworksServer/: CMakeLists.txt  main.cpp  neuronalserver.conf
src/common/: CMakeLists.txt  Define.hpp  Message.hpp
src/common/configuration/: Config.cpp  Config.h
src/common/utilities/: Random.cpp  Random.h  Utils.h
src/server/: CMakeLists.txt  Session.cpp  Session.hpp
src/server/models/: AllModels.h  Madeline.h  MadelineModels.cpp  MadelineModels.h  RadialBasisFunctionModels.h  SelfOrgMapModels.h
src/server/models/parsers/: MadelineParsers.cpp  MadelineParsers.h  RadialBasisFunctionParsers.cpp  RadialBasisFunctionParsers.h  SelfOrgMapParsers.cpp  SelfOrgMapParsers.h
src/server/neuronal-networks/: Layer.cpp  Layer.hpp  Madeline.cpp  Madeline.hpp  MultiLayerPerceptron.cpp  MultiLayerPerceptron.hpp  Neuron.cpp  Neuron.h  Neuron.hpp  Node.cpp  Node.h
src/server/neuronal-networks/rbf/: RadialBasisFunction.cpp  RadialBasisFunction.h  RadialCenter.cpp  RadialCenter.h
src/server/neuronal-networks/som/: SelfOrgMap.cpp  SelfOrgMap.h  SomNode.cpp  SomNode.h
src/server/neuronal-networks/trigger-functions/: TriggerFunction.h  TriggerFunction.hpp
src/server/protocol/: OpcodeTable.cpp  OpcodeTable.h  Opcodes.hpp
